--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ I also dream to expand my career into IT combining both my extraordinary oratory
 An eloquent, multitasker, with outstanding leadership abilities since high school achieving national prizes in both academics and extracurricular activities.Receipent of EU grant to work on sustainability.</p>
 
 <div id="container">
-      <button>Download my CV!</button>
+      <button><a href="resume.pdf" download>Download my CV!</a></button>
     </div>
 
 
